# std_multi_runtime

./: Cargo.toml  Makefile  README.md
node/opportunity/: Cargo.toml
node/opportunity/src/: chain_spec.rs  command.rs  rpc.rs
node/standard/: Cargo.toml
node/standard/src/: chain_spec.rs  command.rs  service.rs
orml/traits/: Cargo.toml
pallets/asset-registry/: Cargo.toml
pallets/market/: Cargo.toml
pallets/oracle/: Cargo.toml
pallets/template/: Cargo.toml
pallets/vault/: Cargo.toml
primitives/: Cargo.toml
runtime/opportunity/: Cargo.toml
runtime/opportunity/src/: lib.rs
runtime/standard/: Cargo.toml
runtime/standard/src/: lib.rs
