[dependencies]
derive_more = '0.15.0'
log = "0.4.13"
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.2.1"
# RPC related dependencies
jsonrpc-core = "15.1.0"
futures = '0.3.4'
primitives = { path = "../../primitives", default-features = false }

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.opportunity-runtime]
path = '../../runtime/opportunity'
version = "2.0.0"

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-consensus-epochs]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-consensus-slots]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-consensus-babe-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-finality-grandpa-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'



[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'



[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.pallet-staking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.pallet-im-online]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '0.9.0'


[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.4'
version = '3.0.0'


# Cumulus dependencies
[dependencies.cumulus-client-consensus-relay-chain]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.4'

[dependencies.cumulus-client-collator]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.4'

[dependencies.cumulus-client-network]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.4'

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.4'

[dependencies.cumulus-client-service]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.4'

# Polkadot dependencies
[dependencies.polkadot-primitives]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.9.4'

[dependencies.polkadot-service]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.9.4'

[dependencies.polkadot-cli]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.9.4'

[dependencies.polkadot-test-service]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.9.4'

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.9.4'




[[bin]]
name = 'opportunity-collator'

[package]
authors = ['Anonymous']
build = 'build.rs'
description = 'A new Cumulus FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'opportunity-collator'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = []
runtime-benchmarks = ['opportunity-runtime/runtime-benchmarks']

